# active_learning_ts

./: .gitignore  LICENSE  README.md  pyproject.toml
active_learning_ts/: __init__.py  active_learner.py  core.py  data_blackboard.py  data_instance.py  data_pipeline.py  oracle.py  pipeline_element.py  pool.py  queryable.py
active_learning_ts/data_retrievement/: data_retriever.py  data_source.py  interpolation_strategy.py  pool.py  retrievement_strategy.py
active_learning_ts/evaluation/: evaluation_metric.py  evaluator.py
active_learning_ts/experiments/: blueprint.py  blueprint_config.py  blueprint_element.py  blueprint_instance.py  experiment.py  experiment_runner.py
active_learning_ts/instance_properties/: instance_cost.py  instance_objective.py
active_learning_ts/interpolation/: interpolation_strategy.py
active_learning_ts/knowledge_discovery/: knowledge_discovery.py  knowledge_discovery_task.py  no_knowledge_discovery_task.py
active_learning_ts/logging/: data_blackboard.py
active_learning_ts/pools/: continuous_vector_pool.py  discrete_vector_pool.py  find_strategy.py  retrievement_strategy.py
active_learning_ts/query_selection/: query_optimizer.py  query_sampler.py  query_selector.py  selection_criteria.py
active_learning_ts/surrogate_model/: surrogate_model.py
active_learning_ts/surrogate_models/: gaussion_surrogate_model.py  no_surrogate_model.py  surrogate_model.py
active_learning_ts/training/: trainer.py  training_strategy.py
tests/: test_active_learning_ts.py
tests/experiments/: test_data_set_experiment.py  test_experiments.py  test_gaussian_data_gaussian_sm_prim_kd.py  test_gaussian_experiment.py  test_knowledge_discovery_experiment.py  test_maxima_experiment.py
tests/knowledge_discovery/: test_prim_scenario_discovery_knowledge_discovery_task.py
(+57 files in other folders)
