[tool.poetry]
name = "active_learning_ts"
version = "0.2.4.3"
description = ""
authors = ["bela127 <bhb127@outlook.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.7.0"
sklearn = "^0.0"
scipy = "^1.7.0"
tensor-annotations = "^1.0.2"
tensor-annotations-tensorflow-stubs = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
distribution_data_generation = {git = "https://github.com/bela127/distribution_data_generation.git"}
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
